# candidate

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/candidate/: checkers.py  config.py  fetchers.py  main.py  network.py  tracker.py  ui.py
src/candidate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
