[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "candidate"
version         = "0.1.2"
description     = "CLI tool to practice Competitive Programming and DSA"
requires-python = ">=3.11"

dependencies    = [
    "browser-cookie3",
    "python-dotenv",
    "requests",
]

[project.scripts]
candidate = "candidate.main:run"

[tool.setuptools.packages.find]
where = ["src"]

